[Add] Google map을 통해 데이터 보여주기

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MapActivity">
 
-<!--    <fragment-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:id="@+id/mapFragment"-->
-<!--        tools:context=".MapsActivity"-->
-<!--        android:name="com.google.android.gms.maps.SupportMapFragment" />-->
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/mapFragment"
+        tools:context=".MapsActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
 <!--        android:id="@+id/currentLocationButton"-->
