--- a/app/src/main/res/values/api_key.xml
+++ b/app/src/main/res/values/api_key.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="tmap_api_key">l7xxe237964cfd60496da1822d28c9c0564a</string>
+    <string name="google_map">AIzaSyCBL-vyH0KFxJ6PwbgwKt2gbd2DdhEuqLo</string>
 </resources>
